# pg-haskell

./: .gitignore  cabal.project
docs/: hs001.md  hs002.md  hs003.md  hs004.md  hs005.md  hs006.md
hs001/: CHANGELOG.md  DESIGN.md  hs001.cabal
hs001/app/: Main.hs
hs001/src/: UpperCase.hs
hs001/test/: Spec.hs
hs002/: CHANGELOG.md  hs002.cabal
hs002/app/: Main.hs
hs002/src/: Lib.hs
hs002/test/: Spec.hs
hs003/: CHANGELOG.md  hs003.cabal
hs003/app/: Main.hs
hs003/src/: Compiler.hs
hs003/test/: Spec.hs
hs004/: CHANGELOG.md  hs004.cabal
hs004/app/: Main.hs
hs004/src/: Compiler.hs
hs004/test/: Spec.hs
hs005/: CHANGELOG.md  hs005.cabal
hs005/app/: Main.hs
hs005/test/: Spec.hs
hs006/: CHANGELOG.md  hs006.cabal
hs006/app/: Main.hs
hs006/src/: CodeGen.hs  Compiler.hs
hs006/test/: Spec.hs
pg001/: CHANGELOG.md  DESIGN.md  pg001.cabal
pg001/app/: Main.hs
pg002/: CHANGELOG.md  pg002.cabal
